--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
           <button type="submit" class="btn btn-primary mt-2">Submit</button>
         </div>
       </form>
+      <div class="row">
+        <div id="output">
+
+        </div>
+      </div>
     </div>
   </body>
 </html>
